// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`full article with style 1`] = `
.c5 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
}

.c6 {
  border: 0px solid black;
  box-sizing: border-box;
  color: rgb(0,0,0);
  display: inline;
  font: 14px system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Ubuntu,"Helvetica Neue",sans-serif;
  margin: 0px;
  padding: 0px;
  white-space: pre-wrap;
  overflow-wrap: break-word;
}

.c25 {
  color: #333333;
  display: block;
  font-family: "TimesDigitalW04-Regular";
  line-height: 26px;
  font-size: 17px;
  margin: 0 auto 25px;
  padding-right: 10px;
  padding-left: 10px;
}

.c25:first-of-type:after {
  content: "";
  clear: both;
  display: table;
}

.c28 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  padding-left: 10px;
}

.c21 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 25px;
}

.c31 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-left: 10px;
  padding-right: 10px;
  padding-bottom: 25px;
}

.c32 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-left: 10px;
  padding-right: 10px;
  padding-bottom: 0;
  display: block;
}

.c27 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  padding-left: 10px;
  padding-right: 10px;
  margin-bottom: 10px;
}

.c26 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  display: block;
}

.c22 {
  clear: both;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin: 0 auto 30px;
  width: 80.8%;
  min-height: 210px;
}

.c22.hidden {
  visibility: hidden;
}

.c23 {
  border-bottom: 1px solid #dbdbdb;
  color: #333;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  font: normal 14px / 17px TimesDigitalW04-Regular;
  margin-bottom: 10px;
  padding: 5px 0;
  text-transform: uppercase;
}

.c24 {
  -webkit-flex: 1 1 50%;
  -ms-flex: 1 1 50%;
  flex: 1 1 50%;
}

.c29 {
  clear: both;
  min-height: 283px;
  margin: 30px 0;
  box-sizing: content-box;
  padding: 0 0 10px;
  border-bottom: 1px solid rgb(219,219,219);
}

.c30 {
  border-bottom: 1px solid rgb(219,219,219);
  color: #696969;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  font: normal 14px / 17px TimesDigitalW04-Regular;
  -webkit-letter-spacing: 0.6px;
  -moz-letter-spacing: 0.6px;
  -ms-letter-spacing: 0.6px;
  letter-spacing: 0.6px;
  margin: 0 0 10px;
  padding: 0 0 5px;
  text-align: center;
  text-transform: uppercase;
}

.c2 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 > .c16 {
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
}

.c20 {
  display: block;
  -webkit-order: 4;
  -ms-flex-order: 4;
  order: 4;
}

.c19 {
  background-color: #FFFFFF;
  height: 60px;
}

.c19 [data-tc-sticky-sizer] {
  border-bottom: 1px solid transparent;
  will-change: border-bottom-color;
}

.c19.tc-sticky {
  will-change: height,box-shadow;
}

.c19[MOCK-PROGRESS-SELECTOR] {
  height: 59.5px;
  box-shadow: 0 2px 5px 0 #c9c7c7ed;
}

.c19[MOCK-PROGRESS-SELECTOR].tc-sticky [data-tc-sticky-sizer] {
  border-bottom-color: #ffffffdb;
}

.c18 {
  border: solid #DBDBDB;
  border-width: 1px 0;
  margin-left: 10px;
  margin-right: 10px;
}

.c18 + .c17 {
  margin-top: -1px !important;
}

.c18:last-child {
  margin-bottom: 30px;
}

.c18.contains-tc-sticky {
  border-bottom-color: transparent;
}

.c4 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  border-radius: 50%;
  height: 100px;
  overflow: hidden;
  width: 100px;
}

.c14 {
  border: 0px solid black;
  box-sizing: border-box;
  color: rgb(0,0,0);
  display: inline;
  font: 14px system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Ubuntu,"Helvetica Neue",sans-serif;
  margin: 0px;
  padding: 0px;
  white-space: pre-wrap;
  overflow-wrap: break-word;
  font-family: GillSansMTStd-Medium;
  font-size: 13px;
  line-height: 15px;
  color: #696969;
  margin-top: 15px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-top: 15px;
}

.c8 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  padding-top: 5px;
  padding-bottom: 15px;
}

.c3 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 25px;
  margin-left: 10px;
  margin-right: 10px;
  padding-top: 35px;
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c7 {
  border: 0px solid black;
  box-sizing: border-box;
  display: inline;
  font: 14px system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Ubuntu,"Helvetica Neue",sans-serif;
  margin: 0px;
  padding: 0px;
  white-space: pre-wrap;
  overflow-wrap: break-word;
  font-size: 30px;
  line-height: 33px;
  color: #1D1D1B;
  margin-bottom: 10px;
  text-align: center;
}

.c11 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  max-width: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c13 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  max-width: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c10 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c12 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  display: none;
}

.c9 {
  border: 0px solid black;
  box-sizing: border-box;
  display: inline;
  font: 14px system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Ubuntu,"Helvetica Neue",sans-serif;
  margin: 0px;
  padding: 0px;
  white-space: pre-wrap;
  overflow-wrap: break-word;
  font-family: TimesModern-Regular;
  font-size: 20px;
  line-height: 26;
  color: #333333;
  margin-bottom: 15px;
  padding-left: 10px;
  padding-right: 10px;
  text-align: center;
}

.c15 {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c0 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  box-sizing: content-box;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 50px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-top-color: #DBDBDB;
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1px;
  padding-top: 10px;
  padding-bottom: 10px;
}

@media (min-width:768px) {
  .c25 {
    font-size: 18px;
    line-height: 30px;
    padding-left: 0;
    padding-right: 0;
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c25 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c28 {
    padding-left: 0px;
  }
}

@media (min-width:768px) {
  .c21 {
    width: 80.8%;
    margin: 0 auto;
  }
}

@media (min-width:1024px) {
  .c21 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c31 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c31 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c32 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c32 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c27 {
    width: 50%;
    float: left;
    margin-right: 20px;
    margin-bottom: 0px;
    margin-top: 5px;
    padding-left: 0px;
    padding-right: 0px;
  }
}

@media (min-width:768px) {
  .c26 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c26 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c22 {
    min-height: 120px;
  }
}

@media (min-width:1024px) {
  .c22 {
    width: 56.2%;
  }
}

@media (max-width:767px) {
  .c24 {
    -webkit-flex: 1 1 46%;
    -ms-flex: 1 1 46%;
    flex: 1 1 46%;
  }

  .c24:first-of-type {
    margin-right: 1.5%;
  }

  .c24:last-child {
    margin-left: 1.5%;
  }
}

@media (min-width:768px) {
  .c29 {
    min-height: 123px;
  }
}

@media (min-width:970px) {
  .c29 {
    min-height: 283px;
  }
}

@media (min-width:1024px) {
  .c1 {
    padding-top: 20px;
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c18 {
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c18 {
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c18 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c4 {
    height: 118px;
    width: 118px;
  }
}

@media (min-width:768px) {
  .c14 {
    margin-top: 0;
  }
}

@media (min-width:768px) {
  .c8 {
    padding-top: 0;
  }
}

@media (min-width:768px) {
  .c3 {
    width: 80.8%;
    margin-top: 0;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 30px;
  }
}

@media (min-width:1024px) {
  .c3 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c7 {
    font-size: 45px;
    line-height: 50px;
    margin-bottom: 5px;
  }
}

@media (min-width:768px) {
  .c11 {
    margin-top: 0;
  }
}

@media (min-width:768px) {
  .c13 {
    margin-top: 0;
  }
}

@media (min-width:768px) {
  .c10 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
  }
}

@media (min-width:768px) {
  .c12 {
    background-color: #DBDBDB;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    height: 15px;
    margin: 0 10px;
    width: 1px;
  }
}

@media (min-width:768px) {
  .c9 {
    font-size: 22px;
    line-height: 30px;
    margin-bottom: 25px;
  }
}

@media (min-width:1024px) {
  .c9 {
    margin-bottom: 20px;
  }
}

@media (min-width:768px) {
  .c15 {
    margin-bottom: 30px;
  }
}

@media (min-width:1024px) {
  .c15 {
    width: 56.2%;
    margin-left: auto;
    margin-right: auto;
  }
}

@media (min-width:768px) {
  .c0 {
    min-height: 90px;
  }
}

@media (min-width:970px) {
  .c0 {
    min-height: 250px;
  }
}

<style>
.IS1 {
  margin-bottom: 0;
}

.IS2 {
  margin-bottom: 25px;
}

.IS3 {
  font-family: GillSansMTStd-Medium;
  font-size: 12;
  line-height: 12px;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: -1;
  padding-top: 1;
  letter-spacing: 1;
  color: #1D1D1B;
}

.IS4 {
  margin-bottom: 10px;
}

.IS5 {
  flex-direction: row;
  flex-wrap: wrap;
}

.IS6 {
  opacity: 1;
  z-index: 2;
  width: 100%;
  position: absolute;
  display: block;
}

.IS7 {
  display: table;
  height: 0;
  overflow: hidden;
  position: relative;
  width: 100%;
  padding-bottom: 56.25%;
}

.IS8 {
  height: 100%;
  position: absolute;
  width: 100%;
}

.IS9 {
  padding-bottom: 56.25%;
  position: relative;
}

.IS10 {
  margin: 0;
}

.IS11 {
  margin-bottom: 20px;
}

.IS12 {
  display: none;
}

.IS13 {
  height: 100%;
  width: 100%;
}

.IS14 {
  height: 100%;
  width: 100%;
  position: relative;
}

.IS15 {
  height: 100%;
  width: 100%;
}

.IS16 {
  height: 100%;
  position: absolute;
  width: 100%;
}

.IS17 {
  padding-bottom: 56.25%;
  position: relative;
}

.IS18 {
  margin: 0;
}
</style>

<div>
  <div />
  <article>
    <Helmet>
      <title>
        Some Headline
         | 
        
        The Times
      </title>
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <script>
        {"@context":"https://schema.org","@type":"NewsArticle","headline":"Some Headline","publisher":{"@type":"Organization","name":"The Times","logo":{"@type":"ImageObject"}},"mainEntityOfPage":{"@type":"WebPage","@id":"https://www.thetimes.co.uk/article/this-is-slug-2k629tpvh"},"dateCreated":"2015-03-13T18:54:58.000Z","datePublished":"2015-03-13T18:54:58.000Z","isAccessibleForFree":false,"hasPart":{"@type":"WebPageElement","isAccessibleForFree":false,"cssSelector":".undefined"},"image":{"@type":"ImageObject","url":"https://crop169.io?resize=1200","caption":"Some Caption"},"thumbnailUrl":"https://crop169.io","dateModified":"2015-03-13T18:54:58.000Z","author":{"@type":"Person","name":"Some byline"}}
      </script>
    </Helmet>
    <div
      className="c0"
    >
      <AdContainer
        className="IS1"
      />
    </div>
    <main
      className="c1"
    >
      <div
        className="c2"
      >
        <div
          className="c3"
        >
          <div
            className="c4 IS2"
          >
            <Image />
          </div>
          <div
            className="c5 IS4"
          >
            <div
              className="c6 IS3"
            >
              SOME LABEL
            </div>
          </div>
          <h1
            className="c7"
          >
            Some Headline
          </h1>
          <div
            className="c8"
          >
            <ArticleFlags />
          </div>
          <h2
            className="c9"
          >
            Some Standfirst
          </h2>
          <div
            className="c10"
          >
            <div
              className="c11"
            >
              <ArticleBylineWithLinks />
            </div>
            <div
              className="c12"
            />
            <div
              className="c13 IS5"
            >
              <div
                className="c14"
              >
                <DatePublication />
              </div>
            </div>
          </div>
        </div>
        <div
          className="c15 c5 IS11"
        >
          <figure
            className="IS10"
          >
            <div
              className="c5 IS9"
            >
              <div
                className="c5 IS8"
              >
                <div
                  className="IS7"
                >
                  <img
                    className="IS6"
                  />
                </div>
              </div>
            </div>
            <figcaption>
              <CenteredCaption />
            </figcaption>
          </figure>
        </div>
        <div
          className="c16 c17 c18"
        >
          <div
            className="IS12"
          />
          <div>
            <div
              className="c19"
            >
              <div>
                <SaveAndShareBar />
              </div>
            </div>
          </div>
        </div>
      </div>
      <article
        className="c20"
      >
        <div>
          <div>
            <div
              className="c21"
            >
              <ArticleImage />
            </div>
          </div>
        </div>
        <Link>
          Some Link
        </Link>
        <div
          className="group-3 hidden c22"
        >
          <h2
            className="c23"
          >
            Sponsored
          </h2>
          <div
            className="c24"
          />
          <div
            className="c24"
          />
        </div>
        <p
          className="c25"
        >
          Some content
        </p>
        <div
          className="c26"
        >
          <div
            className="c27"
          >
            <PullQuote>
              The pull quote content
            </PullQuote>
          </div>
        </div>
        <div
          className="c21"
        >
          <figure
            className="IS18"
          >
            <div
              className="c5 IS17"
            >
              <div
                className="c5 IS16"
              >
                <div
                  className="IS15"
                >
                  <div
                    className="IS14"
                  >
                    <video
                      className="video-js IS13"
                    />
                  </div>
                </div>
              </div>
            </div>
            <figcaption>
              <div
                className="c28"
              >
                <Caption />
              </div>
            </figcaption>
          </figure>
        </div>
        <div
          className="c29"
        >
          <h2
            className="c30"
          >
            Advertisement
          </h2>
          <AdContainer />
        </div>
        <div>
          <div>
            <div
              className="c31"
            >
              <ArticleImage />
            </div>
          </div>
        </div>
        <div>
          <div>
            <div
              className="c32"
            >
              <ArticleImage />
            </div>
          </div>
        </div>
        <div />
        <ArticleExtras />
      </article>
    </main>
    <AdContainer />
    <AdContainer />
    <AdContainer />
  </article>
</div>
`;

exports[`full article with style in the culture magazine 1`] = `
.c5 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
}

.c6 {
  border: 0px solid black;
  box-sizing: border-box;
  color: rgb(0,0,0);
  display: inline;
  font: 14px system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Ubuntu,"Helvetica Neue",sans-serif;
  margin: 0px;
  padding: 0px;
  white-space: pre-wrap;
  overflow-wrap: break-word;
}

.c25 {
  color: #333333;
  display: block;
  font-family: "TimesDigitalW04-Regular";
  line-height: 26px;
  font-size: 17px;
  margin: 0 auto 25px;
  padding-right: 10px;
  padding-left: 10px;
}

.c25:first-of-type:after {
  content: "";
  clear: both;
  display: table;
}

.c28 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  padding-left: 10px;
}

.c21 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 25px;
}

.c31 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-left: 10px;
  padding-right: 10px;
  padding-bottom: 25px;
}

.c32 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-left: 10px;
  padding-right: 10px;
  padding-bottom: 0;
  display: block;
}

.c27 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  padding-left: 10px;
  padding-right: 10px;
  margin-bottom: 10px;
}

.c26 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  display: block;
}

.c22 {
  clear: both;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin: 0 auto 30px;
  width: 80.8%;
  min-height: 210px;
}

.c22.hidden {
  visibility: hidden;
}

.c23 {
  border-bottom: 1px solid #dbdbdb;
  color: #333;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  font: normal 14px / 17px TimesDigitalW04-Regular;
  margin-bottom: 10px;
  padding: 5px 0;
  text-transform: uppercase;
}

.c24 {
  -webkit-flex: 1 1 50%;
  -ms-flex: 1 1 50%;
  flex: 1 1 50%;
}

.c29 {
  clear: both;
  min-height: 283px;
  margin: 30px 0;
  box-sizing: content-box;
  padding: 0 0 10px;
  border-bottom: 1px solid rgb(219,219,219);
}

.c30 {
  border-bottom: 1px solid rgb(219,219,219);
  color: #696969;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  font: normal 14px / 17px TimesDigitalW04-Regular;
  -webkit-letter-spacing: 0.6px;
  -moz-letter-spacing: 0.6px;
  -ms-letter-spacing: 0.6px;
  letter-spacing: 0.6px;
  margin: 0 0 10px;
  padding: 0 0 5px;
  text-align: center;
  text-transform: uppercase;
}

.c2 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 > .c16 {
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
}

.c20 {
  display: block;
  -webkit-order: 4;
  -ms-flex-order: 4;
  order: 4;
}

.c19 {
  background-color: #FFFFFF;
  height: 60px;
}

.c19 [data-tc-sticky-sizer] {
  border-bottom: 1px solid transparent;
  will-change: border-bottom-color;
}

.c19.tc-sticky {
  will-change: height,box-shadow;
}

.c19[MOCK-PROGRESS-SELECTOR] {
  height: 59.5px;
  box-shadow: 0 2px 5px 0 #c9c7c7ed;
}

.c19[MOCK-PROGRESS-SELECTOR].tc-sticky [data-tc-sticky-sizer] {
  border-bottom-color: #ffffffdb;
}

.c18 {
  border: solid #DBDBDB;
  border-width: 1px 0;
  margin-left: 10px;
  margin-right: 10px;
}

.c18 + .c17 {
  margin-top: -1px !important;
}

.c18:last-child {
  margin-bottom: 30px;
}

.c18.contains-tc-sticky {
  border-bottom-color: transparent;
}

.c4 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  border-radius: 50%;
  height: 100px;
  overflow: hidden;
  width: 100px;
}

.c14 {
  border: 0px solid black;
  box-sizing: border-box;
  color: rgb(0,0,0);
  display: inline;
  font: 14px system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Ubuntu,"Helvetica Neue",sans-serif;
  margin: 0px;
  padding: 0px;
  white-space: pre-wrap;
  overflow-wrap: break-word;
  font-family: GillSansMTStd-Medium;
  font-size: 13px;
  line-height: 15px;
  color: #696969;
  margin-top: 15px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-top: 15px;
}

.c8 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  padding-top: 5px;
  padding-bottom: 15px;
}

.c3 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 25px;
  margin-left: 10px;
  margin-right: 10px;
  padding-top: 35px;
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c7 {
  border: 0px solid black;
  box-sizing: border-box;
  display: inline;
  font: 14px system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Ubuntu,"Helvetica Neue",sans-serif;
  margin: 0px;
  padding: 0px;
  white-space: pre-wrap;
  overflow-wrap: break-word;
  font-family: Flama-Bold;
  font-size: 30px;
  line-height: 33px;
  color: #1D1D1B;
  margin-bottom: 10px;
  text-align: center;
}

.c11 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  max-width: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c13 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  max-width: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c10 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c12 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  display: none;
}

.c9 {
  border: 0px solid black;
  box-sizing: border-box;
  display: inline;
  font: 14px system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Ubuntu,"Helvetica Neue",sans-serif;
  margin: 0px;
  padding: 0px;
  white-space: pre-wrap;
  overflow-wrap: break-word;
  font-family: TimesModern-Regular;
  font-size: 20px;
  line-height: 26;
  color: #333333;
  margin-bottom: 15px;
  padding-left: 10px;
  padding-right: 10px;
  text-align: center;
}

.c15 {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c0 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  box-sizing: content-box;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 50px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-top-color: #DBDBDB;
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1px;
  padding-top: 10px;
  padding-bottom: 10px;
}

@media (min-width:768px) {
  .c25 {
    font-size: 18px;
    line-height: 30px;
    padding-left: 0;
    padding-right: 0;
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c25 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c28 {
    padding-left: 0px;
  }
}

@media (min-width:768px) {
  .c21 {
    width: 80.8%;
    margin: 0 auto;
  }
}

@media (min-width:1024px) {
  .c21 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c31 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c31 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c32 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c32 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c27 {
    width: 50%;
    float: left;
    margin-right: 20px;
    margin-bottom: 0px;
    margin-top: 5px;
    padding-left: 0px;
    padding-right: 0px;
  }
}

@media (min-width:768px) {
  .c26 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c26 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c22 {
    min-height: 120px;
  }
}

@media (min-width:1024px) {
  .c22 {
    width: 56.2%;
  }
}

@media (max-width:767px) {
  .c24 {
    -webkit-flex: 1 1 46%;
    -ms-flex: 1 1 46%;
    flex: 1 1 46%;
  }

  .c24:first-of-type {
    margin-right: 1.5%;
  }

  .c24:last-child {
    margin-left: 1.5%;
  }
}

@media (min-width:768px) {
  .c29 {
    min-height: 123px;
  }
}

@media (min-width:970px) {
  .c29 {
    min-height: 283px;
  }
}

@media (min-width:1024px) {
  .c1 {
    padding-top: 20px;
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c18 {
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c18 {
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c18 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c4 {
    height: 118px;
    width: 118px;
  }
}

@media (min-width:768px) {
  .c14 {
    margin-top: 0;
  }
}

@media (min-width:768px) {
  .c8 {
    padding-top: 0;
  }
}

@media (min-width:768px) {
  .c3 {
    width: 80.8%;
    margin-top: 0;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 30px;
  }
}

@media (min-width:1024px) {
  .c3 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c7 {
    font-size: 45px;
    line-height: 50px;
    margin-bottom: 5px;
  }
}

@media (min-width:768px) {
  .c11 {
    margin-top: 0;
  }
}

@media (min-width:768px) {
  .c13 {
    margin-top: 0;
  }
}

@media (min-width:768px) {
  .c10 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
  }
}

@media (min-width:768px) {
  .c12 {
    background-color: #DBDBDB;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    height: 15px;
    margin: 0 10px;
    width: 1px;
  }
}

@media (min-width:768px) {
  .c9 {
    font-size: 22px;
    line-height: 30px;
    margin-bottom: 25px;
  }
}

@media (min-width:1024px) {
  .c9 {
    margin-bottom: 20px;
  }
}

@media (min-width:768px) {
  .c15 {
    margin-bottom: 30px;
  }
}

@media (min-width:1024px) {
  .c15 {
    width: 56.2%;
    margin-left: auto;
    margin-right: auto;
  }
}

@media (min-width:768px) {
  .c0 {
    min-height: 90px;
  }
}

@media (min-width:970px) {
  .c0 {
    min-height: 250px;
  }
}

<style>
.IS1 {
  margin-bottom: 0;
}

.IS2 {
  margin-bottom: 25px;
}

.IS3 {
  font-family: GillSansMTStd-Medium;
  font-size: 12;
  line-height: 12px;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: -1;
  padding-top: 1;
  letter-spacing: 1;
  color: #7B0046;
}

.IS4 {
  margin-bottom: 10px;
}

.IS5 {
  flex-direction: row;
  flex-wrap: wrap;
}

.IS6 {
  opacity: 1;
  z-index: 2;
  width: 100%;
  position: absolute;
  display: block;
}

.IS7 {
  display: table;
  height: 0;
  overflow: hidden;
  position: relative;
  width: 100%;
  padding-bottom: 56.25%;
}

.IS8 {
  height: 100%;
  position: absolute;
  width: 100%;
}

.IS9 {
  padding-bottom: 56.25%;
  position: relative;
}

.IS10 {
  margin: 0;
}

.IS11 {
  margin-bottom: 20px;
}

.IS12 {
  display: none;
}

.IS13 {
  height: 100%;
  width: 100%;
}

.IS14 {
  height: 100%;
  width: 100%;
  position: relative;
}

.IS15 {
  height: 100%;
  width: 100%;
}

.IS16 {
  height: 100%;
  position: absolute;
  width: 100%;
}

.IS17 {
  padding-bottom: 56.25%;
  position: relative;
}

.IS18 {
  margin: 0;
}
</style>

<div>
  <div />
  <article>
    <Helmet>
      <title>
        Some Headline
         | 
        
        The Times
      </title>
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <script>
        {"@context":"https://schema.org","@type":"NewsArticle","headline":"Some Headline","publisher":{"@type":"Organization","name":"The Times","logo":{"@type":"ImageObject"}},"mainEntityOfPage":{"@type":"WebPage","@id":"https://www.thetimes.co.uk/article/this-is-slug-2k629tpvh"},"dateCreated":"2015-03-13T18:54:58.000Z","datePublished":"2015-03-13T18:54:58.000Z","isAccessibleForFree":false,"hasPart":{"@type":"WebPageElement","isAccessibleForFree":false,"cssSelector":".undefined"},"image":{"@type":"ImageObject","url":"https://crop169.io?resize=1200","caption":"Some Caption"},"thumbnailUrl":"https://crop169.io","dateModified":"2015-03-13T18:54:58.000Z","author":{"@type":"Person","name":"Some byline"}}
      </script>
    </Helmet>
    <div
      className="c0"
    >
      <AdContainer
        className="IS1"
      />
    </div>
    <main
      className="c1"
    >
      <div
        className="c2"
      >
        <div
          className="c3"
        >
          <div
            className="c4 IS2"
          >
            <Image />
          </div>
          <div
            className="c5 IS4"
          >
            <div
              className="c6 IS3"
            >
              SOME LABEL
            </div>
          </div>
          <h1
            className="c7"
          >
            Some Headline
          </h1>
          <div
            className="c8"
          >
            <ArticleFlags />
          </div>
          <h2
            className="c9"
          >
            Some Standfirst
          </h2>
          <div
            className="c10"
          >
            <div
              className="c11"
            >
              <ArticleBylineWithLinks />
            </div>
            <div
              className="c12"
            />
            <div
              className="c13 IS5"
            >
              <div
                className="c14"
              >
                <DatePublication />
              </div>
            </div>
          </div>
        </div>
        <div
          className="c15 c5 IS11"
        >
          <figure
            className="IS10"
          >
            <div
              className="c5 IS9"
            >
              <div
                className="c5 IS8"
              >
                <div
                  className="IS7"
                >
                  <img
                    className="IS6"
                  />
                </div>
              </div>
            </div>
            <figcaption>
              <CenteredCaption />
            </figcaption>
          </figure>
        </div>
        <div
          className="c16 c17 c18"
        >
          <div
            className="IS12"
          />
          <div>
            <div
              className="c19"
            >
              <div>
                <SaveAndShareBar />
              </div>
            </div>
          </div>
        </div>
      </div>
      <article
        className="c20"
      >
        <div>
          <div>
            <div
              className="c21"
            >
              <ArticleImage />
            </div>
          </div>
        </div>
        <Link>
          Some Link
        </Link>
        <div
          className="group-3 hidden c22"
        >
          <h2
            className="c23"
          >
            Sponsored
          </h2>
          <div
            className="c24"
          />
          <div
            className="c24"
          />
        </div>
        <p
          className="c25"
        >
          Some content
        </p>
        <div
          className="c26"
        >
          <div
            className="c27"
          >
            <PullQuote>
              The pull quote content
            </PullQuote>
          </div>
        </div>
        <div
          className="c21"
        >
          <figure
            className="IS18"
          >
            <div
              className="c5 IS17"
            >
              <div
                className="c5 IS16"
              >
                <div
                  className="IS15"
                >
                  <div
                    className="IS14"
                  >
                    <video
                      className="video-js IS13"
                    />
                  </div>
                </div>
              </div>
            </div>
            <figcaption>
              <div
                className="c28"
              >
                <Caption />
              </div>
            </figcaption>
          </figure>
        </div>
        <div
          className="c29"
        >
          <h2
            className="c30"
          >
            Advertisement
          </h2>
          <AdContainer />
        </div>
        <div>
          <div>
            <div
              className="c31"
            >
              <ArticleImage />
            </div>
          </div>
        </div>
        <div>
          <div>
            <div
              className="c32"
            >
              <ArticleImage />
            </div>
          </div>
        </div>
        <div />
        <ArticleExtras />
      </article>
    </main>
    <AdContainer />
    <AdContainer />
    <AdContainer />
  </article>
</div>
`;

exports[`full article with style in the style magazine 1`] = `
.c5 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
}

.c6 {
  border: 0px solid black;
  box-sizing: border-box;
  color: rgb(0,0,0);
  display: inline;
  font: 14px system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Ubuntu,"Helvetica Neue",sans-serif;
  margin: 0px;
  padding: 0px;
  white-space: pre-wrap;
  overflow-wrap: break-word;
}

.c25 {
  color: #333333;
  display: block;
  font-family: "TimesDigitalW04-Regular";
  line-height: 26px;
  font-size: 17px;
  margin: 0 auto 25px;
  padding-right: 10px;
  padding-left: 10px;
}

.c25:first-of-type:after {
  content: "";
  clear: both;
  display: table;
}

.c28 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  padding-left: 10px;
}

.c21 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 25px;
}

.c31 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-left: 10px;
  padding-right: 10px;
  padding-bottom: 25px;
}

.c32 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-left: 10px;
  padding-right: 10px;
  padding-bottom: 0;
  display: block;
}

.c27 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  padding-left: 10px;
  padding-right: 10px;
  margin-bottom: 10px;
}

.c26 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  display: block;
}

.c22 {
  clear: both;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin: 0 auto 30px;
  width: 80.8%;
  min-height: 210px;
}

.c22.hidden {
  visibility: hidden;
}

.c23 {
  border-bottom: 1px solid #dbdbdb;
  color: #333;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  font: normal 14px / 17px TimesDigitalW04-Regular;
  margin-bottom: 10px;
  padding: 5px 0;
  text-transform: uppercase;
}

.c24 {
  -webkit-flex: 1 1 50%;
  -ms-flex: 1 1 50%;
  flex: 1 1 50%;
}

.c29 {
  clear: both;
  min-height: 283px;
  margin: 30px 0;
  box-sizing: content-box;
  padding: 0 0 10px;
  border-bottom: 1px solid rgb(219,219,219);
}

.c30 {
  border-bottom: 1px solid rgb(219,219,219);
  color: #696969;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  font: normal 14px / 17px TimesDigitalW04-Regular;
  -webkit-letter-spacing: 0.6px;
  -moz-letter-spacing: 0.6px;
  -ms-letter-spacing: 0.6px;
  letter-spacing: 0.6px;
  margin: 0 0 10px;
  padding: 0 0 5px;
  text-align: center;
  text-transform: uppercase;
}

.c2 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 > .c16 {
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
}

.c20 {
  display: block;
  -webkit-order: 4;
  -ms-flex-order: 4;
  order: 4;
}

.c19 {
  background-color: #FFFFFF;
  height: 60px;
}

.c19 [data-tc-sticky-sizer] {
  border-bottom: 1px solid transparent;
  will-change: border-bottom-color;
}

.c19.tc-sticky {
  will-change: height,box-shadow;
}

.c19[MOCK-PROGRESS-SELECTOR] {
  height: 59.5px;
  box-shadow: 0 2px 5px 0 #c9c7c7ed;
}

.c19[MOCK-PROGRESS-SELECTOR].tc-sticky [data-tc-sticky-sizer] {
  border-bottom-color: #ffffffdb;
}

.c18 {
  border: solid #DBDBDB;
  border-width: 1px 0;
  margin-left: 10px;
  margin-right: 10px;
}

.c18 + .c17 {
  margin-top: -1px !important;
}

.c18:last-child {
  margin-bottom: 30px;
}

.c18.contains-tc-sticky {
  border-bottom-color: transparent;
}

.c4 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  border-radius: 50%;
  height: 100px;
  overflow: hidden;
  width: 100px;
}

.c14 {
  border: 0px solid black;
  box-sizing: border-box;
  color: rgb(0,0,0);
  display: inline;
  font: 14px system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Ubuntu,"Helvetica Neue",sans-serif;
  margin: 0px;
  padding: 0px;
  white-space: pre-wrap;
  overflow-wrap: break-word;
  font-family: GillSansMTStd-Medium;
  font-size: 13px;
  line-height: 15px;
  color: #696969;
  margin-top: 15px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-top: 15px;
}

.c8 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  padding-top: 5px;
  padding-bottom: 15px;
}

.c3 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 25px;
  margin-left: 10px;
  margin-right: 10px;
  padding-top: 35px;
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c7 {
  border: 0px solid black;
  box-sizing: border-box;
  display: inline;
  font: 14px system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Ubuntu,"Helvetica Neue",sans-serif;
  margin: 0px;
  padding: 0px;
  white-space: pre-wrap;
  overflow-wrap: break-word;
  font-family: CenturyGothic-Bold;
  font-size: 30px;
  line-height: 33px;
  color: #1D1D1B;
  margin-bottom: 10px;
  text-align: center;
  text-transform: uppercase;
}

.c11 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  max-width: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c13 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  max-width: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c10 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c12 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  display: none;
}

.c9 {
  border: 0px solid black;
  box-sizing: border-box;
  display: inline;
  font: 14px system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Ubuntu,"Helvetica Neue",sans-serif;
  margin: 0px;
  padding: 0px;
  white-space: pre-wrap;
  overflow-wrap: break-word;
  font-family: TimesModern-Regular;
  font-size: 20px;
  line-height: 26;
  color: #333333;
  margin-bottom: 15px;
  padding-left: 10px;
  padding-right: 10px;
  text-align: center;
}

.c15 {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c0 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  box-sizing: content-box;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 50px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-top-color: #DBDBDB;
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1px;
  padding-top: 10px;
  padding-bottom: 10px;
}

@media (min-width:768px) {
  .c25 {
    font-size: 18px;
    line-height: 30px;
    padding-left: 0;
    padding-right: 0;
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c25 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c28 {
    padding-left: 0px;
  }
}

@media (min-width:768px) {
  .c21 {
    width: 80.8%;
    margin: 0 auto;
  }
}

@media (min-width:1024px) {
  .c21 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c31 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c31 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c32 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c32 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c27 {
    width: 50%;
    float: left;
    margin-right: 20px;
    margin-bottom: 0px;
    margin-top: 5px;
    padding-left: 0px;
    padding-right: 0px;
  }
}

@media (min-width:768px) {
  .c26 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c26 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c22 {
    min-height: 120px;
  }
}

@media (min-width:1024px) {
  .c22 {
    width: 56.2%;
  }
}

@media (max-width:767px) {
  .c24 {
    -webkit-flex: 1 1 46%;
    -ms-flex: 1 1 46%;
    flex: 1 1 46%;
  }

  .c24:first-of-type {
    margin-right: 1.5%;
  }

  .c24:last-child {
    margin-left: 1.5%;
  }
}

@media (min-width:768px) {
  .c29 {
    min-height: 123px;
  }
}

@media (min-width:970px) {
  .c29 {
    min-height: 283px;
  }
}

@media (min-width:1024px) {
  .c1 {
    padding-top: 20px;
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c18 {
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c18 {
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c18 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c4 {
    height: 118px;
    width: 118px;
  }
}

@media (min-width:768px) {
  .c14 {
    margin-top: 0;
  }
}

@media (min-width:768px) {
  .c8 {
    padding-top: 0;
  }
}

@media (min-width:768px) {
  .c3 {
    width: 80.8%;
    margin-top: 0;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 30px;
  }
}

@media (min-width:1024px) {
  .c3 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c7 {
    font-size: 45px;
    line-height: 50px;
    margin-bottom: 5px;
  }
}

@media (min-width:768px) {
  .c11 {
    margin-top: 0;
  }
}

@media (min-width:768px) {
  .c13 {
    margin-top: 0;
  }
}

@media (min-width:768px) {
  .c10 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
  }
}

@media (min-width:768px) {
  .c12 {
    background-color: #DBDBDB;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    height: 15px;
    margin: 0 10px;
    width: 1px;
  }
}

@media (min-width:768px) {
  .c9 {
    font-size: 22px;
    line-height: 30px;
    margin-bottom: 25px;
  }
}

@media (min-width:1024px) {
  .c9 {
    margin-bottom: 20px;
  }
}

@media (min-width:768px) {
  .c15 {
    margin-bottom: 30px;
  }
}

@media (min-width:1024px) {
  .c15 {
    width: 56.2%;
    margin-left: auto;
    margin-right: auto;
  }
}

@media (min-width:768px) {
  .c0 {
    min-height: 90px;
  }
}

@media (min-width:970px) {
  .c0 {
    min-height: 250px;
  }
}

<style>
.IS1 {
  margin-bottom: 0;
}

.IS2 {
  margin-bottom: 25px;
}

.IS3 {
  font-family: GillSansMTStd-Medium;
  font-size: 12;
  line-height: 12px;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: -1;
  padding-top: 1;
  letter-spacing: 1;
  color: #BC3385;
}

.IS4 {
  margin-bottom: 10px;
}

.IS5 {
  flex-direction: row;
  flex-wrap: wrap;
}

.IS6 {
  opacity: 1;
  z-index: 2;
  width: 100%;
  position: absolute;
  display: block;
}

.IS7 {
  display: table;
  height: 0;
  overflow: hidden;
  position: relative;
  width: 100%;
  padding-bottom: 56.25%;
}

.IS8 {
  height: 100%;
  position: absolute;
  width: 100%;
}

.IS9 {
  padding-bottom: 56.25%;
  position: relative;
}

.IS10 {
  margin: 0;
}

.IS11 {
  margin-bottom: 20px;
}

.IS12 {
  display: none;
}

.IS13 {
  height: 100%;
  width: 100%;
}

.IS14 {
  height: 100%;
  width: 100%;
  position: relative;
}

.IS15 {
  height: 100%;
  width: 100%;
}

.IS16 {
  height: 100%;
  position: absolute;
  width: 100%;
}

.IS17 {
  padding-bottom: 56.25%;
  position: relative;
}

.IS18 {
  margin: 0;
}
</style>

<div>
  <div />
  <article>
    <Helmet>
      <title>
        Some Headline
         | 
        
        The Times
      </title>
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <script>
        {"@context":"https://schema.org","@type":"NewsArticle","headline":"Some Headline","publisher":{"@type":"Organization","name":"The Times","logo":{"@type":"ImageObject"}},"mainEntityOfPage":{"@type":"WebPage","@id":"https://www.thetimes.co.uk/article/this-is-slug-2k629tpvh"},"dateCreated":"2015-03-13T18:54:58.000Z","datePublished":"2015-03-13T18:54:58.000Z","isAccessibleForFree":false,"hasPart":{"@type":"WebPageElement","isAccessibleForFree":false,"cssSelector":".undefined"},"image":{"@type":"ImageObject","url":"https://crop169.io?resize=1200","caption":"Some Caption"},"thumbnailUrl":"https://crop169.io","dateModified":"2015-03-13T18:54:58.000Z","author":{"@type":"Person","name":"Some byline"}}
      </script>
    </Helmet>
    <div
      className="c0"
    >
      <AdContainer
        className="IS1"
      />
    </div>
    <main
      className="c1"
    >
      <div
        className="c2"
      >
        <div
          className="c3"
        >
          <div
            className="c4 IS2"
          >
            <Image />
          </div>
          <div
            className="c5 IS4"
          >
            <div
              className="c6 IS3"
            >
              SOME LABEL
            </div>
          </div>
          <h1
            className="c7"
          >
            Some Headline
          </h1>
          <div
            className="c8"
          >
            <ArticleFlags />
          </div>
          <h2
            className="c9"
          >
            Some Standfirst
          </h2>
          <div
            className="c10"
          >
            <div
              className="c11"
            >
              <ArticleBylineWithLinks />
            </div>
            <div
              className="c12"
            />
            <div
              className="c13 IS5"
            >
              <div
                className="c14"
              >
                <DatePublication />
              </div>
            </div>
          </div>
        </div>
        <div
          className="c15 c5 IS11"
        >
          <figure
            className="IS10"
          >
            <div
              className="c5 IS9"
            >
              <div
                className="c5 IS8"
              >
                <div
                  className="IS7"
                >
                  <img
                    className="IS6"
                  />
                </div>
              </div>
            </div>
            <figcaption>
              <CenteredCaption />
            </figcaption>
          </figure>
        </div>
        <div
          className="c16 c17 c18"
        >
          <div
            className="IS12"
          />
          <div>
            <div
              className="c19"
            >
              <div>
                <SaveAndShareBar />
              </div>
            </div>
          </div>
        </div>
      </div>
      <article
        className="c20"
      >
        <div>
          <div>
            <div
              className="c21"
            >
              <ArticleImage />
            </div>
          </div>
        </div>
        <Link>
          Some Link
        </Link>
        <div
          className="group-3 hidden c22"
        >
          <h2
            className="c23"
          >
            Sponsored
          </h2>
          <div
            className="c24"
          />
          <div
            className="c24"
          />
        </div>
        <p
          className="c25"
        >
          Some content
        </p>
        <div
          className="c26"
        >
          <div
            className="c27"
          >
            <PullQuote>
              The pull quote content
            </PullQuote>
          </div>
        </div>
        <div
          className="c21"
        >
          <figure
            className="IS18"
          >
            <div
              className="c5 IS17"
            >
              <div
                className="c5 IS16"
              >
                <div
                  className="IS15"
                >
                  <div
                    className="IS14"
                  >
                    <video
                      className="video-js IS13"
                    />
                  </div>
                </div>
              </div>
            </div>
            <figcaption>
              <div
                className="c28"
              >
                <Caption />
              </div>
            </figcaption>
          </figure>
        </div>
        <div
          className="c29"
        >
          <h2
            className="c30"
          >
            Advertisement
          </h2>
          <AdContainer />
        </div>
        <div>
          <div>
            <div
              className="c31"
            >
              <ArticleImage />
            </div>
          </div>
        </div>
        <div>
          <div>
            <div
              className="c32"
            >
              <ArticleImage />
            </div>
          </div>
        </div>
        <div />
        <ArticleExtras />
      </article>
    </main>
    <AdContainer />
    <AdContainer />
    <AdContainer />
  </article>
</div>
`;

exports[`full article with style in the sunday times magazine 1`] = `
.c5 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
}

.c6 {
  border: 0px solid black;
  box-sizing: border-box;
  color: rgb(0,0,0);
  display: inline;
  font: 14px system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Ubuntu,"Helvetica Neue",sans-serif;
  margin: 0px;
  padding: 0px;
  white-space: pre-wrap;
  overflow-wrap: break-word;
}

.c25 {
  color: #333333;
  display: block;
  font-family: "TimesDigitalW04-Regular";
  line-height: 26px;
  font-size: 17px;
  margin: 0 auto 25px;
  padding-right: 10px;
  padding-left: 10px;
}

.c25:first-of-type:after {
  content: "";
  clear: both;
  display: table;
}

.c28 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  padding-left: 10px;
}

.c21 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 25px;
}

.c31 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-left: 10px;
  padding-right: 10px;
  padding-bottom: 25px;
}

.c32 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-left: 10px;
  padding-right: 10px;
  padding-bottom: 0;
  display: block;
}

.c27 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  padding-left: 10px;
  padding-right: 10px;
  margin-bottom: 10px;
}

.c26 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  display: block;
}

.c22 {
  clear: both;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin: 0 auto 30px;
  width: 80.8%;
  min-height: 210px;
}

.c22.hidden {
  visibility: hidden;
}

.c23 {
  border-bottom: 1px solid #dbdbdb;
  color: #333;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  font: normal 14px / 17px TimesDigitalW04-Regular;
  margin-bottom: 10px;
  padding: 5px 0;
  text-transform: uppercase;
}

.c24 {
  -webkit-flex: 1 1 50%;
  -ms-flex: 1 1 50%;
  flex: 1 1 50%;
}

.c29 {
  clear: both;
  min-height: 283px;
  margin: 30px 0;
  box-sizing: content-box;
  padding: 0 0 10px;
  border-bottom: 1px solid rgb(219,219,219);
}

.c30 {
  border-bottom: 1px solid rgb(219,219,219);
  color: #696969;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  font: normal 14px / 17px TimesDigitalW04-Regular;
  -webkit-letter-spacing: 0.6px;
  -moz-letter-spacing: 0.6px;
  -ms-letter-spacing: 0.6px;
  letter-spacing: 0.6px;
  margin: 0 0 10px;
  padding: 0 0 5px;
  text-align: center;
  text-transform: uppercase;
}

.c2 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 > .c16 {
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
}

.c20 {
  display: block;
  -webkit-order: 4;
  -ms-flex-order: 4;
  order: 4;
}

.c19 {
  background-color: #FFFFFF;
  height: 60px;
}

.c19 [data-tc-sticky-sizer] {
  border-bottom: 1px solid transparent;
  will-change: border-bottom-color;
}

.c19.tc-sticky {
  will-change: height,box-shadow;
}

.c19[MOCK-PROGRESS-SELECTOR] {
  height: 59.5px;
  box-shadow: 0 2px 5px 0 #c9c7c7ed;
}

.c19[MOCK-PROGRESS-SELECTOR].tc-sticky [data-tc-sticky-sizer] {
  border-bottom-color: #ffffffdb;
}

.c18 {
  border: solid #DBDBDB;
  border-width: 1px 0;
  margin-left: 10px;
  margin-right: 10px;
}

.c18 + .c17 {
  margin-top: -1px !important;
}

.c18:last-child {
  margin-bottom: 30px;
}

.c18.contains-tc-sticky {
  border-bottom-color: transparent;
}

.c4 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  border-radius: 50%;
  height: 100px;
  overflow: hidden;
  width: 100px;
}

.c14 {
  border: 0px solid black;
  box-sizing: border-box;
  color: rgb(0,0,0);
  display: inline;
  font: 14px system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Ubuntu,"Helvetica Neue",sans-serif;
  margin: 0px;
  padding: 0px;
  white-space: pre-wrap;
  overflow-wrap: break-word;
  font-family: GillSansMTStd-Medium;
  font-size: 13px;
  line-height: 15px;
  color: #696969;
  margin-top: 15px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-top: 15px;
}

.c8 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  padding-top: 5px;
  padding-bottom: 15px;
}

.c3 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 25px;
  margin-left: 10px;
  margin-right: 10px;
  padding-top: 35px;
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c7 {
  border: 0px solid black;
  box-sizing: border-box;
  display: inline;
  font: 14px system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Ubuntu,"Helvetica Neue",sans-serif;
  margin: 0px;
  padding: 0px;
  white-space: pre-wrap;
  overflow-wrap: break-word;
  font-family: Tiempos-Headline-Bold;
  font-size: 30px;
  line-height: 33px;
  color: #1D1D1B;
  margin-bottom: 10px;
  text-align: center;
}

.c11 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  max-width: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c13 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  max-width: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c10 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c12 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  display: none;
}

.c9 {
  border: 0px solid black;
  box-sizing: border-box;
  display: inline;
  font: 14px system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Ubuntu,"Helvetica Neue",sans-serif;
  margin: 0px;
  padding: 0px;
  white-space: pre-wrap;
  overflow-wrap: break-word;
  font-family: TimesModern-Regular;
  font-size: 20px;
  line-height: 26;
  color: #333333;
  margin-bottom: 15px;
  padding-left: 10px;
  padding-right: 10px;
  text-align: center;
}

.c15 {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c0 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  box-sizing: content-box;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 50px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-top-color: #DBDBDB;
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1px;
  padding-top: 10px;
  padding-bottom: 10px;
}

@media (min-width:768px) {
  .c25 {
    font-size: 18px;
    line-height: 30px;
    padding-left: 0;
    padding-right: 0;
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c25 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c28 {
    padding-left: 0px;
  }
}

@media (min-width:768px) {
  .c21 {
    width: 80.8%;
    margin: 0 auto;
  }
}

@media (min-width:1024px) {
  .c21 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c31 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c31 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c32 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c32 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c27 {
    width: 50%;
    float: left;
    margin-right: 20px;
    margin-bottom: 0px;
    margin-top: 5px;
    padding-left: 0px;
    padding-right: 0px;
  }
}

@media (min-width:768px) {
  .c26 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c26 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c22 {
    min-height: 120px;
  }
}

@media (min-width:1024px) {
  .c22 {
    width: 56.2%;
  }
}

@media (max-width:767px) {
  .c24 {
    -webkit-flex: 1 1 46%;
    -ms-flex: 1 1 46%;
    flex: 1 1 46%;
  }

  .c24:first-of-type {
    margin-right: 1.5%;
  }

  .c24:last-child {
    margin-left: 1.5%;
  }
}

@media (min-width:768px) {
  .c29 {
    min-height: 123px;
  }
}

@media (min-width:970px) {
  .c29 {
    min-height: 283px;
  }
}

@media (min-width:1024px) {
  .c1 {
    padding-top: 20px;
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c18 {
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c18 {
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c18 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c4 {
    height: 118px;
    width: 118px;
  }
}

@media (min-width:768px) {
  .c14 {
    margin-top: 0;
  }
}

@media (min-width:768px) {
  .c8 {
    padding-top: 0;
  }
}

@media (min-width:768px) {
  .c3 {
    width: 80.8%;
    margin-top: 0;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 30px;
  }
}

@media (min-width:1024px) {
  .c3 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c7 {
    font-size: 45px;
    line-height: 50px;
    margin-bottom: 5px;
  }
}

@media (min-width:768px) {
  .c11 {
    margin-top: 0;
  }
}

@media (min-width:768px) {
  .c13 {
    margin-top: 0;
  }
}

@media (min-width:768px) {
  .c10 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
  }
}

@media (min-width:768px) {
  .c12 {
    background-color: #DBDBDB;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    height: 15px;
    margin: 0 10px;
    width: 1px;
  }
}

@media (min-width:768px) {
  .c9 {
    font-size: 22px;
    line-height: 30px;
    margin-bottom: 25px;
  }
}

@media (min-width:1024px) {
  .c9 {
    margin-bottom: 20px;
  }
}

@media (min-width:768px) {
  .c15 {
    margin-bottom: 30px;
  }
}

@media (min-width:1024px) {
  .c15 {
    width: 56.2%;
    margin-left: auto;
    margin-right: auto;
  }
}

@media (min-width:768px) {
  .c0 {
    min-height: 90px;
  }
}

@media (min-width:970px) {
  .c0 {
    min-height: 250px;
  }
}

<style>
.IS1 {
  margin-bottom: 0;
}

.IS2 {
  margin-bottom: 25px;
}

.IS3 {
  font-family: GillSansMTStd-Medium;
  font-size: 12;
  line-height: 12px;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: -1;
  padding-top: 1;
  letter-spacing: 1;
  color: #F13D00;
}

.IS4 {
  margin-bottom: 10px;
}

.IS5 {
  flex-direction: row;
  flex-wrap: wrap;
}

.IS6 {
  opacity: 1;
  z-index: 2;
  width: 100%;
  position: absolute;
  display: block;
}

.IS7 {
  display: table;
  height: 0;
  overflow: hidden;
  position: relative;
  width: 100%;
  padding-bottom: 56.25%;
}

.IS8 {
  height: 100%;
  position: absolute;
  width: 100%;
}

.IS9 {
  padding-bottom: 56.25%;
  position: relative;
}

.IS10 {
  margin: 0;
}

.IS11 {
  margin-bottom: 20px;
}

.IS12 {
  display: none;
}

.IS13 {
  height: 100%;
  width: 100%;
}

.IS14 {
  height: 100%;
  width: 100%;
  position: relative;
}

.IS15 {
  height: 100%;
  width: 100%;
}

.IS16 {
  height: 100%;
  position: absolute;
  width: 100%;
}

.IS17 {
  padding-bottom: 56.25%;
  position: relative;
}

.IS18 {
  margin: 0;
}
</style>

<div>
  <div />
  <article>
    <Helmet>
      <title>
        Some Headline
         | 
        
        The Times
      </title>
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <script>
        {"@context":"https://schema.org","@type":"NewsArticle","headline":"Some Headline","publisher":{"@type":"Organization","name":"The Times","logo":{"@type":"ImageObject"}},"mainEntityOfPage":{"@type":"WebPage","@id":"https://www.thetimes.co.uk/article/this-is-slug-2k629tpvh"},"dateCreated":"2015-03-13T18:54:58.000Z","datePublished":"2015-03-13T18:54:58.000Z","isAccessibleForFree":false,"hasPart":{"@type":"WebPageElement","isAccessibleForFree":false,"cssSelector":".undefined"},"image":{"@type":"ImageObject","url":"https://crop169.io?resize=1200","caption":"Some Caption"},"thumbnailUrl":"https://crop169.io","dateModified":"2015-03-13T18:54:58.000Z","author":{"@type":"Person","name":"Some byline"}}
      </script>
    </Helmet>
    <div
      className="c0"
    >
      <AdContainer
        className="IS1"
      />
    </div>
    <main
      className="c1"
    >
      <div
        className="c2"
      >
        <div
          className="c3"
        >
          <div
            className="c4 IS2"
          >
            <Image />
          </div>
          <div
            className="c5 IS4"
          >
            <div
              className="c6 IS3"
            >
              SOME LABEL
            </div>
          </div>
          <h1
            className="c7"
          >
            Some Headline
          </h1>
          <div
            className="c8"
          >
            <ArticleFlags />
          </div>
          <h2
            className="c9"
          >
            Some Standfirst
          </h2>
          <div
            className="c10"
          >
            <div
              className="c11"
            >
              <ArticleBylineWithLinks />
            </div>
            <div
              className="c12"
            />
            <div
              className="c13 IS5"
            >
              <div
                className="c14"
              >
                <DatePublication />
              </div>
            </div>
          </div>
        </div>
        <div
          className="c15 c5 IS11"
        >
          <figure
            className="IS10"
          >
            <div
              className="c5 IS9"
            >
              <div
                className="c5 IS8"
              >
                <div
                  className="IS7"
                >
                  <img
                    className="IS6"
                  />
                </div>
              </div>
            </div>
            <figcaption>
              <CenteredCaption />
            </figcaption>
          </figure>
        </div>
        <div
          className="c16 c17 c18"
        >
          <div
            className="IS12"
          />
          <div>
            <div
              className="c19"
            >
              <div>
                <SaveAndShareBar />
              </div>
            </div>
          </div>
        </div>
      </div>
      <article
        className="c20"
      >
        <div>
          <div>
            <div
              className="c21"
            >
              <ArticleImage />
            </div>
          </div>
        </div>
        <Link>
          Some Link
        </Link>
        <div
          className="group-3 hidden c22"
        >
          <h2
            className="c23"
          >
            Sponsored
          </h2>
          <div
            className="c24"
          />
          <div
            className="c24"
          />
        </div>
        <p
          className="c25"
        >
          Some content
        </p>
        <div
          className="c26"
        >
          <div
            className="c27"
          >
            <PullQuote>
              The pull quote content
            </PullQuote>
          </div>
        </div>
        <div
          className="c21"
        >
          <figure
            className="IS18"
          >
            <div
              className="c5 IS17"
            >
              <div
                className="c5 IS16"
              >
                <div
                  className="IS15"
                >
                  <div
                    className="IS14"
                  >
                    <video
                      className="video-js IS13"
                    />
                  </div>
                </div>
              </div>
            </div>
            <figcaption>
              <div
                className="c28"
              >
                <Caption />
              </div>
            </figcaption>
          </figure>
        </div>
        <div
          className="c29"
        >
          <h2
            className="c30"
          >
            Advertisement
          </h2>
          <AdContainer />
        </div>
        <div>
          <div>
            <div
              className="c31"
            >
              <ArticleImage />
            </div>
          </div>
        </div>
        <div>
          <div>
            <div
              className="c32"
            >
              <ArticleImage />
            </div>
          </div>
        </div>
        <div />
        <ArticleExtras />
      </article>
    </main>
    <AdContainer />
    <AdContainer />
    <AdContainer />
  </article>
</div>
`;
